--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <div>
-        <img src="rana.jpg" width="90px" >
+        <img src="rana.jpg"  >
+        <h1>rana ameer</h1>
     </div>
     
 </body>
